# Home-Unlock-App

./: App.js  DetailsScreen.js  HomeScreen.js  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/homeunlockapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/HomeUnlockApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/HomeUnlockApp.xcodeproj/: project.pbxproj
ios/HomeUnlockApp.xcodeproj/xcshareddata/xcschemes/: HomeUnlockApp.xcscheme
