cmake_minimum_required(VERSION 3.10.2)
project(HomeUnlockApp)

# Set the C++ standard to C++17
set(CMAKE_CXX_STANDARD 17)

# (Optional) Add additional configuration if needed
# For example, if you have native modules, you can add:
# add_library(appmodules SHARED src/main/cpp/appmodules.cpp)
# target_include_directories(appmodules PRIVATE ${CMAKE_SOURCE_DIR}/src/main/cpp)
